// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Checked 1`] = `
<div>
  <label
    class="m-0 mt-1 text-lg transition ease-out delay-500 select-none text-md font-heading text-main"
  >
    <span
      class="mr-3 align-top"
    >
      Test Checkbox
    </span>
     
    <input
      class="sr-only"
      type="checkbox"
    />
     
    <span
      class="inline-block w-4 h-4 mt-1 transition-all duration-300 ease-in-out border-2 border-main-300"
    />
  </label>
</div>
`;

exports[`Renders Correctly - Unchecked 1`] = `
<div>
  <label
    class="m-0 mt-1 text-lg transition ease-out delay-500 select-none text-md font-heading text-main"
  >
    <span
      class="mr-3 align-top"
    >
      Another Input
    </span>
     
    <input
      class="sr-only"
      type="checkbox"
    />
     
    <span
      class="inline-block w-4 h-4 mt-1 transition-all duration-300 ease-in-out border-2 border-main-300"
    />
  </label>
</div>
`;
